--- a/quomediaview.html
+++ b/quomediaview.html
@@ -27,7 +27,7 @@
 				
 				<div id="menucontrols">
 					<div id="qviewlogo">
-						<a href="QView.html" id="qvlogotext" title="QuoMediaView">QMV</a>
+						<a href="quomediaview.html" id="qvlogotext" title="QuoMediaView">QMV</a>
 						<span id="savenotifier">&#x26A0;!</span>
 					</div>
 
