Change logo function to clearing search results

--- a/quomediaview.html
+++ b/quomediaview.html
@@ -27,7 +27,7 @@
 				
 				<div id="menucontrols">
 					<div id="qviewlogo">
-						<a href="quomediaview.html" id="qvlogotext" title="QuoMediaView">QMV</a>
+						<a id="qvlogotext" title="QuoMediaView" href="#" onclick="searching('')">QMV</a>
 						<span id="savenotifier">&#x26A0;!</span>
 					</div>
 
