fix light mode typo and use whole button area

--- a/quomediaview.html
+++ b/quomediaview.html
@@ -41,7 +41,7 @@
 							<input list="availabletags" id="banbar" /><input type="reset" value="X" /> <input type="submit" value="&#x2192;" />
 						</form>
 						<hr />
-						<div id="darkthemebutton"><label for="darkthemesw">&#x263E;</label><input type="radio" name="themeswitch" id="darkthemesw" onclick="themeswitch('dark')"></div><div id="lightthemebutton"><label for="lighthemesw">&#x263C;</label><input type="radio" name="themeswitch" id="lightthemesw" onclick="themeswitch('light')"></div>
+						<div id="darkthemebutton" onclick="themeswitch('dark')"><label for="darkthemesw">&#x263E;</label><input type="radio" name="themeswitch" id="darkthemesw" onclick="themeswitch('dark')"></div><div id="lightthemebutton" onclick="themeswitch('light')"><label for="lightthemesw">&#x263C;</label><input type="radio" name="themeswitch" id="lightthemesw" onclick="themeswitch('light')"></div>
 						<br />
 						<input type="button" id="transl_s_edit" onclick="editinterface()" value="Edit" title="edit"/>
 						<input type="button" id="transl_s_options" onclick="editoptions()" value="Options" title="options"/>
