bugfix for creating new empty database

--- a/quomediaview.html
+++ b/quomediaview.html
@@ -193,7 +193,7 @@
 						<form autocomplete="off" id="qmvjsonload" onsubmit="loading('start'); return false">
 							Load QuoMediaView JSON data: <input type="text" id="qmvjson_loadinput" /><input type="submit" value="→" />
 						</form>
-						<input type="button" onclick="document.getElementById('qmvjson_loadinput').value = qmvdbtemplate; loading()" value="Load empty QuoMediaView DB" />
+						<input type="button" onclick="document.getElementById('qmvjson_loadinput').value = qmv_data_template; loading('start'); return false" value="Load empty QuoMediaView DB" />
 					</div>
 
 					<noscript>Please enable JavaScript.</noscript>
